nbsap/static/css/style.css
/* ... */
.progress .bar {
    text-shadow: none;
    color: #333;
    text-align: right;
}
.progress .value  {
    text-shadow: 1px 0 1px #fff;
    position: relative;
    font-size: 11px;
    right: -10px;
}
.progress .value-double-digits {
    right: -15px;
}
.progress .value-null {
    right: -4px;
}
.pie-chart li {
    list-style-type: none;
}
.pie-chart .color {
    border: 1px solid #333;
    background: red;
    display: block;
    width: 10px;
    height: 10px;
    float: left;
    margin-right: 6px;
}
.pie-chart .legend span {
    position: relative;
    top: -3px;
}
.pie-chart .legend {
    position: absolute;
    left: 350px;
}
.pie-chart ul {
    margin-top: 10px;
}
.pie-chart li {
    padding: 3px 0;
}

.file-input-container {
    display: none;
}
.file-input-container input[type="file"] {
    font-size: 12px;
}
.file-input-container iframe {
    display: none;
}

.sep {
    border-top: 1px solid #ccc;
    margin-top: 30px;
    text-align: center;
    width: 379px;
}
.sep a {
    position: relative;
    padding: 3px 4px;
    background: #fff;
    top: -11px;
}
.sep .icon-container {
    position: relative;
    background: #fff;
    padding: 3px 4px;
    top: -12px;
    left: -6px;

}
.sep .icon-chevron-down,
.sep .icon-chevron-up {
    background-color: #fff;
    opacity: 0.5;
    -moz-opacity: 0.5
    filter:alpha(opacity=5);
}

.fees td:hover .icon-trash {
    text-decoration: none;
    display: block;
    cursor: pointer;
}

.hide {
    display: none;
}

.actions {
    list-style-type: none;
    float: right;
    height: 29px;
}
.actions > li {
    margin-right: 15px;
    float: left;
}

.highlight td {
    background: #ffff99!important;
}
/*
.field-i18nstring textarea,
.field-i18nstring input,
.i18nstring-city input {
  margin-bottom: 10px;
  width: 400px;
}
*/
.i18string-city input {
  width: 210px;
}

.err {
    margin-top: 5px;
    font-weight: bold;
    font-size: 12px;
    color: red;
}

.offline-container {
    position: absolute;
    top: 2px;
    left: 160px;
    width: 420px;
}

.offline-container strong {
    position: relative;
    top: 2px;
}

.update_attendance {
  cursor: pointer;
}

.edit_attendance {
  cursor: pointer;
  position: absolute;
  right: -25px;
  top: 7px;
}

.save_attendance {
  cursor: pointer;
  position: absolute;
  right: -25px;
  top: 7px;
}

table.people-listing tr .edit_attendance {
  display: none!important;
}

table.people-listing tr .checkbox {
  display: none;
}

table.people-listing tr .save_attendance {
  display: none;
}

table.people-listing tr:hover .edit_attendance {
  display: block!important;
}

table.people-listing tr {
  height: 40px;
}

table.people-listing tr:nth-child(even):hover td,
table.people-listing tr:nth-child(even):hover th {
    background-color: white;
}

table.people-listing tr:nth-child(odd):hover td,
table.people-listing tr:nth-child(odd):hover th {
    background-color: #f9f9f9;
}

/* NBSAP stylesheets */
.listing {
    position: relative;
}
.listing p {
    font-size: 14px;
    margin-bottom: 0;
}
.listing a {
    margin-left: 3px;
}
.listing h3 {
    margin-top: 25px;
}

.indent {
    position: relative;
    left: 25px;
}

.property_list {
    margin-top: 30px;
}

table.indicator_view td.indicator_field {
  width: 350px;
}

form.indicator_form div.form-actions {
    padding-left: 20px;
}

textarea.mapping_text {
  width: 800px;
  max-width: 800px;
  margin-left: 20px;
}

textarea.objective,
textarea.other_targets {
  width: 750px;
  max-width: 750px;
}

.homepage_view {
  position: relative;
  display: block;
}

p.description {
  font-size: 14px;
}

.homepage_view div.row {
  margin-top: 5px;
  position: relative;
}

.homepage_view {
  position: relative;
  display: block;
}

p.description {
  font-size: 14px;
}

div.element_field {
  padding-top: 50px;
}

.homepage_view h2 {
  font-size: 14px;
  line-height: 18px;
  border-bottom: 1px solid #CCC;
}

.homepage_view h1 {
  font-size: 18px;
  line-height: 27px;
  border-bottom: 1px solid #CCC;
}

.homepage_view div.row {
  margin-top: 5px;
  margin-left: 0px;
  position: relative;
}

.homepage_view div.full {
  display: none;
}

.indicator_homepage table {
  margin-top: 10px;
}

.indicator_homepage h2 {
  border-bottom: 0;
}

.login-container {
    margin-top: 8px;
}

.login-container label {
    margin-bottom: 6px;
}

.login-container input {
    width: 350px;
}
.login-container button {
    margin-bottom: 8px;
}

.login-container div.signin-button {
    margin-top: 10px;
}

.login-alternative span {
        font-style: italic;
}

.login-alternative a {
        font-style: italic;
        text-decoration: none;
}

.wmd-panel .btn-toolbar {
        margin-bottom: 10px!important;
}

.add {
    margin-bottom: 15px;
}

.modal-backdrop {
    opacity: 0.2;
}

#help {
  top: 30%;
  left: 45%;
  width: auto;
}

#help p {
  margin: 0 0 5px 0;
  color: #888;
}

.hidden {
    display: none;
}
/* SONIA's styles */

/* header */
body {
    padding: 0px;
	background: #4D8584 url('../bg.png') repeat-x;
}

.navbar-inner {
	width: 1170px;
	margin: 0 auto;
	background: white;
	padding: 0;
	border: 0px;
	border-radius: 0px;
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px;
}

.navbar {
	margin-bottom: 0;
}

.navbar-inner .container {
	background: url('../024.jpg') no-repeat 100% -73%;
	height: 99px;
}

.navbar .brand {
	width: 31%;
	height: 50px;
    margin-top: 5px;
	margin-left: 0;
	padding-left: 67px;
	padding-top: 36px;
	color: #014E46;
	background: url('../CHM_logo_45x70px.png') no-repeat 3% 72%;
}

@media (min-width: 1200px) {
    .navbar-inner .container,
	footer {
		width: 1170px;
    }

	.container.content {
		width: 1155px;
	}
}

@media (max-width: 1024px) {

	.container.content {
		width: 925px;
	}

	.navbar-inner,
	footer {
		width: 940px;
    }

	.navbar-inner .container {
		background: url('../024.jpg') no-repeat 166% -73%;
		width: 940px;
	}

	.navbar .brand {
		width: 35%;
	}
}

.navbar .nav.top-menu {
    margin-top: -7px;
	font-size: 11px;
}
/* ... */

